--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -80,7 +80,7 @@
                     <!-- search query -->
                     <div th:replace="fragments/components::backendRequestParamError"></div>
                     <div class="input-group">
-                        <input class="form-control form-control-sm" id="queryTextBox" type="text" placeholder="title, ISBN, author, publisher...">
+                        <input class="form-control form-control-sm" id="queryTextBox" type="text" placeholder="ISBN, Title, Author or Publisher">
                         <div class="input-group-append">
                             <button class="btn btn-info btn-sm" id="searchTextBoxButton">
                                 <i class="fas fa-search"></i>
