--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,14 +11,14 @@
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
-            <div th:replace="fragments/components::title(text = ${errorMessage})"></div>
+            <div th:replace="fragments/components::title(text = ${errorTitle})"></div>
             <!-- Content -->
             <div class="row bg-white">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
-                        <h4 class="px-2" th:text="${errorTitle}"></h4>
+                        <h4 class="px-2" th:text="${errorMessage}"></h4>
                         <br/>
                         <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
                     </div>
