--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -24,7 +24,7 @@
                 <div class="col-sm-1"></div>
             </div>
             <!-- main content -->
-            <div class="row bg-white">
+            <div class="row">
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- checkout form -->
@@ -116,7 +116,7 @@
                 <div class="col-sm-4">
                     <div class="row">
                         <div class="col-sm-1"></div>
-                        <div class="col-sm-10 d-flex flex-column bg-light">
+                        <div class="col-sm-10 d-flex flex-column">
                             <!-- panel title -->
                             <div class="d-flex justify-content-center mt-3">
                                 <p class="text-dark font-weight-light">Purchase Summary</p>
