--- a/src/main/resources/templates/resetPasswordConfirmation.html
+++ b/src/main/resources/templates/resetPasswordConfirmation.html
@@ -13,11 +13,11 @@
             <!-- title -->
             <div th:replace="fragments/components::title(text = 'Reset Password')"></div>
             <!-- Content -->
-            <div class="row bg-white">
+            <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
-                    <div class="bg-light">
+                    <div>
                         <p class="px-2">You should have received an email with the reset password.</p>
                         <p class="px-2">We strongly recommend that you replace the password provided with a new one.</p>
                         <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
