--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -12,12 +12,12 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
             <div class="row">
-                <div class="col-sm-12 bg-white">
+                <div class="col-sm-12">
                     <h2 class="text-center text-info my-4">Congratulations!</h2>
                 </div>
             </div>
             <!-- Content -->
-            <div class="row bg-white">
+            <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
