--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -14,7 +14,7 @@
             <div th:replace="fragments/components::title(text = 'Book Form')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-2 bg-white"></div>
+                <div class="col-sm-2"></div>
                 <div class="col-sm-8">
                     <form class="needs-validation" novalidate id="isbnForm" th:action="@{/admin/bookForm}" th:object="${bookForm}" method="POST" enctype="multipart/form-data">
                         <input type="hidden" th:field="*{bookId}"/>
@@ -23,7 +23,7 @@
                         <input type="hidden" name="sort" th:value="${sort}"/>
                         <div th:replace="fragments/components::backendGenericObjectFieldErrors"></div>
                         <div class="form-row">
-                            <div class="col-sm-6 bg-light">
+                            <div class="col-sm-6">
                                 <!-------------------------------------------------------------------------Title-->
                                 <div class="form-group">
                                     <label for="title">Title:</label>
@@ -87,7 +87,7 @@
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('description')"></div>
                             </div>
-                            <div class="col-sm-6 bg-light">
+                            <div class="col-sm-6">
                                 <!-------------------------------------------------------------------------Authors-->
                                 <!-- label -->
                                 <label>Author/s:</label>
@@ -168,14 +168,14 @@
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('price')"></div>
                             </div>
-                            <div class="col-sm-12 bg-light">
+                            <div class="col-sm-12">
                                 <button th:replace="fragments/components::saveButton"></button>
                                 <a th:replace="fragments/components::cancelButtonToBack"></a>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="col-sm-2 bg-white"></div>
+                <div class="col-sm-2"></div>
             </div>
         </div>
         <!-- footer -->
