--- a/src/main/resources/templates/categoryForm.html
+++ b/src/main/resources/templates/categoryForm.html
@@ -14,8 +14,8 @@
             <div th:replace="fragments/components::title(text = 'Category Form')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <form class="needs-validation" novalidate th:action="@{/admin/categoryForm}" th:object="${categoryForm}" method="POST" action="#">
                         <input type="hidden" th:field="*{categoryId}"/>
                         <input type="hidden" th:field="*{parent.name}"/>
@@ -43,7 +43,7 @@
                         <a th:replace="fragments/components::cancelButtonToBack"></a>
                     </form>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
