--- a/src/main/resources/templates/deleteUser.html
+++ b/src/main/resources/templates/deleteUser.html
@@ -11,8 +11,8 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <div th:replace="fragments/components::title(text = ${user.profile.firstName} + ', we\'re sorry to see you go')"></div>
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <form class="needs-validation" novalidate th:action="@{/user/deleteUser}" th:object="${userDeletionForm}" method="POST" action="#">
                         <div th:replace="fragments/components::backendGenericObjectFieldErrors"></div>
                         <!-- deletion reason -->
@@ -47,7 +47,7 @@
                         <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
