--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -14,8 +14,8 @@
             <div th:replace="fragments/components::title(text = 'Edit Password')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${passwordForm}" method="POST" action="#">
                         <!-- Current Password -->
                         <div class="form-group">
@@ -43,7 +43,7 @@
                         <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
