--- a/src/main/resources/templates/emailConfirmationError.html
+++ b/src/main/resources/templates/emailConfirmationError.html
@@ -13,11 +13,11 @@
             <!-- title -->
             <div th:replace="fragments/components::title(text = ${message})"></div>
             <!-- Content -->
-            <div class="row bg-white">
+            <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
-                    <div class="bg-light">
+                    <div>
                         <br/>
                         <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
                         <br/>
