--- a/src/main/resources/templates/emailConfirmationRequest.html
+++ b/src/main/resources/templates/emailConfirmationRequest.html
@@ -13,11 +13,11 @@
             <!-- title -->
             <div th:replace="fragments/components::title(text = 'Email Confirmation')"></div>
             <!-- Content -->
-            <div class="row bg-white">
+            <div class="row">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <hr class="mb-4 mt-0"/>
-                    <div class="bg-light">
+                    <div>
                         <p class="px-2">You should have received an email with a confirmation link. In order to complete the process, please click on it.</p>
                         <p class="px-2">Remember to check your spam folder.</p>
                         <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
