--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       lang="en">
     <head th:replace="fragments/components::head('FirstMarket')"></head>
-    <body class="bg-white">
+    <body>
         <!-- fm-content -->
         <div class="container-fluid fm-content">
             <!-- header -->
@@ -13,7 +13,7 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- jumbotron -->
             <div class="row">
-                <div class="col-sm-12 bg-white">
+                <div class="col-sm-12">
                     <div class="jumbotron jumbotron-fluid mb-0">
                         <!-- main message -->
                         <h1 class="text-center">
