--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -15,9 +15,9 @@
             <!-- main content -->
             <div class="row">
                 <!-- left margin -->
-                <div class="col-sm-1 bg-white"></div>
+                <div class="col-sm-1"></div>
                 <!-- content -->
-                <div class="col-sm-10 bg-light">
+                <div class="col-sm-10">
                     <!-- new image form -->
                     <p class="mt-1 mb-0">Select a new image:</p>
                     <form class="needs-validation mt-1" novalidate th:action="@{/admin/newImage}" th:object="${imagesWrapper}" method="POST" enctype="multipart/form-data">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <!-- right margin -->
-                <div class="col-sm-1 bg-white"></div>
+                <div class="col-sm-1"></div>
             </div>
             <!-- modal -->
             <div th:replace="fragments/components::deletingModal(entity = 'Image')"></div>
