--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
             <!-- title -->
             <div th:replace="fragments/components::title(text = 'Login')"></div>
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <!-- login form -->
                     <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
                         <div th:replace="fragments/components::loginError"></div>
@@ -42,7 +42,7 @@
                         <span>Forgot your password? Click <a class="text-info" th:href="@{/resetPassword}" style="text-decoration: none">here</a> to restore it.</span>
                     </div>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
