--- a/src/main/resources/templates/newUser.html
+++ b/src/main/resources/templates/newUser.html
@@ -11,8 +11,8 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <div th:replace="fragments/components::title(text = 'New User')"></div>
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <form class="needs-validation" novalidate th:action="@{/newUser}" th:object="${userForm}" method="POST" action="#">
                         <!-- email -->
                         <div class="form-group">
@@ -40,7 +40,7 @@
                         <a th:replace="fragments/components::cancelButtonToBack"></a>
                     </form>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
