--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -13,19 +13,19 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
             <div class="row mt-5 mb-3">
-                <div class="col-sm-1 bg-white"></div>
-                <div class="col-sm-11 bg-white">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-11">
                     <h2 class="text-dark font-weight-light" sec:authorize="!hasRole('ADMIN')">My Purchases</h2>
                     <h2 class="text-dark font-weight-light" sec:authorize="hasRole('ADMIN')">Orders</h2>
                 </div>
             </div>
             <!-- pagination control -->
-            <div class="row bg-white">
+            <div class="row">
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- controls -->
                 <div class="col-sm-10">
-                    <div class="row bg-light mb-3 py-3">
+                    <div class="row mb-3 py-3">
                         <!-- page size -->
                         <div class="col-sm-4 d-flex align-items-end">
                             <select class="custom-select custom-select-sm text-secondary bg-light" id="paginationPageSize" style="max-width: 33%">
@@ -75,7 +75,7 @@
                 <div class="col-sm-1"></div>
             </div>
             <!-- main content -->
-            <div class="row bg-white">
+            <div class="row">
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- orders -->
