--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -14,8 +14,8 @@
             <div th:replace="fragments/components::title(text = 'Reset Password')"></div>
             <!-- main content -->
             <div class="row">
-                <div class="col-sm-3 bg-white"></div>
-                <div class="col-sm-6 bg-light">
+                <div class="col-sm-3"></div>
+                <div class="col-sm-6">
                     <div th:replace="fragments/components::backendRequestParamError"></div>
                     <form class="needs-validation" novalidate id="form" th:action="@{/resetPassword}" method="POST" action="#">
                         <!-- email -->
@@ -29,7 +29,7 @@
                         <a th:replace="fragments/components::cancelButtonToHome"></a>
                     </form>
                 </div>
-                <div class="col-sm-3 bg-white"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
         <!-- footer -->
