--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,19 +12,19 @@
             <div th:replace="fragments/components::mainCatsNavBar"></div>
             <!-- title -->
             <div class="row mt-5 mb-3">
-                <div class="col-sm-1 bg-white"></div>
-                <div class="col-sm-11 bg-white">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-11">
                     <h2 class="text-dark font-weight-light">Users</h2>
                 </div>
             </div>
             <!-- main content -->
-            <div class="row bg-white">
+            <div class="row">
                 <!-- left margin -->
                 <div class="col-sm-1"></div>
                 <!-- users -->
                 <div class="col-sm-10 d-flex flex-column">
                     <!-- pagination control -->
-                    <div class="row bg-light mb-3 py-3">
+                    <div class="row mb-3 py-3">
                         <!-- page size -->
                         <div class="col-sm-4 d-flex align-items-end">
                             <select class="custom-select custom-select-sm text-secondary bg-light" id="paginationPageSize" style="max-width: 33%">
