--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -57,7 +57,7 @@
                                     <a class="nav-link text-white font-italic" th:href="@{/home}">FirstMarket</a>
                                 </li>-->
                                 <li class="nav-item">
-                                    <a class="nav-link text-white font-weight-bold" th:href="@{/books}">All Books</a>
+                                    <a class="nav-link text-white font-weight-bold" th:href="@{/books}">Our Books</a>
                                 </li>
                                 <!--user links-->
                                 <li class="nav-item" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
