--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,9 +17,11 @@
                     <div class="jumbotron jumbotron-fluid mb-0">
                         <!-- main message -->
                         <h1 class="text-center">
-                            <strong class="text-dark font-weight-light" id="mainTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.title.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.title.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.speed') : 0}"></strong>
-                            <small class="font-weight-lighter" id="secondaryTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.subtitle.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.subtitle.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.speed') : 0}"></small>
+                            <span class="text-dark" id="mainTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.title.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.title.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.title.speed') : 0}"></span>
                         </h1>
+                        <h3 class="text-center font-weight-lighter">
+                            <em class="text-secondary font-weight-lighter small" id="secondaryTitle" th:attrappend="tw-text=${(@environment.getProperty('fm.front-end.home.jum.subtitle.text') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.text') : ' '}, tw-speed=${(@environment.getProperty('fm.front-end.home.jum.subtitle.speed') ne null) ? @environment.getProperty('fm.front-end.home.jum.subtitle.speed') : 0}"></em>
+                        </h3>
                         <!-- admin message -->
                         <div class="text-center" sec:authorize="hasRole('ADMIN')">
                             <h6><code class="text-info font-italic">
@@ -27,16 +29,16 @@
                             </code></h6>
                         </div>
                         <!-- search query -->
-                        <div class="row">
+                        <div class="row mt-n2">
                             <!-- left margin  -->
-                            <div class="col-sm-4"></div>
+                            <div class="col-sm-3"></div>
                             <!-- query -->
-                            <div class="col-sm-4">
+                            <div class="col-sm-6">
                                 <form class="needs-validation" novalidate th:action="@{/books}" method="GET">
                                     <div class="input-group mt-5">
-                                        <input class="form-control form-control-sm" type="text" name="q" placeholder="Find by ISBN, Title, Author or Publisher" required />
+                                        <input class="form-control form-control-lg" type="text" name="q" placeholder="Find by ISBN, Title, Author or Publisher" required />
                                         <div class="input-group-append">
-                                            <button class="btn btn-info btn-sm" type="submit">
+                                            <button class="btn btn-info btn-lg" type="submit">
                                                 <i class="fas fa-search"></i>
                                             </button>
                                         </div>
@@ -44,19 +46,20 @@
                                 </form>
                             </div>
                             <!-- right margin  -->
-                            <div class="col-sm-4"></div>
+                            <div class="col-sm-3"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- main content -->
-            <div class="row mt-4">
+            <div class="row">
                 <!--<div class="col-sm-1"></div>-->
                 <div class="col-sm-12">
                     <div class="row">
                         <!-- trending books title -->
                         <div class="col-sm-12 my-3">
-                            <h2 class="text-info text-center">Trending Books</h2>
+                            <hr/>
+                            <h2 class="text-info text-center">- Trending Books -</h2>
                         </div>
                         <!-- trending books -->
                         <div class="col-sm-12 my-3">
@@ -114,7 +117,7 @@
                         <!-- new books title -->
                         <div class="col-sm-12 my-3">
                             <hr class="mt-0 mb-4"/>
-                            <h2 class="text-info text-center my-2">New Books</h2>
+                            <h2 class="text-info text-center my-2">- New Books -</h2>
                         </div>
                         <!-- new books -->
                         <div class="col-sm-12 my-3">
