--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                     <!-- login form -->
-                    <form class="needs-validation" novalidate th:action="@{/login}" method="POST" action="#">
+                    <form class="needs-validation" novalidate th:action="@{/login}" method="POST">
                         <div th:replace="fragments/components::loginError"></div>
                         <!-- email -->
                         <div class="form-group">
